@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST roodi-2.0.0.gem 17920 RMD160 303582197f9714a1f9e337e9dba4aa175e1652c8 SHA1 6ce0009c066e9b08cbae7e99e5e385e92c1b0927 SHA256 61f4a27d555aa8d9421fa35cc5867f270d2ab84af2512e17ce48653044ad099d
+DIST roodi-2.1.0.gem 19968 RMD160 e4fe20aa3e089f22152297460d8dfe2f918073ab SHA1 fc8c1b28de4f8906eaca013ed0ee5f63013108e3 SHA256 11ea5158d3f69434b9e1bd1a71cd00791cfbb8e3552dbab6bcea2c925a19ea4b
 EBUILD roodi-2.0.0.ebuild 378 RMD160 03cc4cc5ec53ca7ade7111540495fe9d1a0ee234 SHA1 cc74b9ff5ef6340a04211726f614be04bf3d0888 SHA256 084aaaca575254ab87a4d9ed49736da44d81062da4df8e0a038811c2b7774081
-MISC ChangeLog 251 RMD160 90a5fc0f7f929b905cb0950ef864ec85c3d6ad8d SHA1 6e9661c07924db36aa844fce396b2b6a7460e4c4 SHA256 c3cd7cec9b955354af38db56f3fce3950627d6d9d9bf72e92675c418f6c33462
+EBUILD roodi-2.1.0.ebuild 599 RMD160 367f6edc7b298002c1ba46328cd9e0a0ace10a15 SHA1 c7261487d9a60de44158e6e0077417316cba7441 SHA256 49c1a67723b43ff691e946c74118f77f4b0a3f4820ffba89564a3e89f6f723bc
+MISC ChangeLog 392 RMD160 378859489052975d245e2bb09518d88d51a6628a SHA1 acda397aa62e9d7eaa1778c91cb3618e1dea0211 SHA256 43210d33f689a59afe58052a82bd917e8bd5bc6322e27be32f7eda9191e748af
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkql6AkACgkQVYU2Ai8K93dHjACdG2TxTRuhj1suw4a0VodYyzCG
-ywEAn36GuTOXba1B5P+YcDRETYSnRd2u
-=CyPV
+iEYEARECAAYFAks7maUACgkQeM7EJeUH71MmcwCfQiJadOBIYcJa+9fzuN3ogZST
+o8YAnRWCWqADSMk0hAqw1OfPrCzvzbKh
+=B0qg
 -----END PGP SIGNATURE-----
