@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*roodi-2.1.0 (30 Dec 2009)
+
+  30 Dec 2009; Hans de Graaff <graaff@gentoo.org> +roodi-2.1.0.ebuild:
+  Version bump, convert to ruby-fakegem.
+
 *roodi-2.0.0 (07 Sep 2009)
 
   07 Sep 2009; Hans de Graaff <graaff@gentoo.org> +roodi-2.0.0.ebuild,
